samples/_failures_safe/1761392614_46bf03_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_84867fa5.c: In function ‘main’:
./samples/SAFE/__tmp_84867fa5.c:165:20: error: expected ‘)’ at end of input
  165 |     dijkstra(&graph
      |             ~      ^
      |                    )
./samples/SAFE/__tmp_84867fa5.c:165:5: error: too few arguments to function ‘dijkstra’
  165 |     dijkstra(&graph
      |     ^~~~~~~~
./samples/SAFE/__tmp_84867fa5.c:43:6: note: declared here
   43 | void dijkstra(struct Graph* graph, int startNode) {
      |      ^~~~~~~~
./samples/SAFE/__tmp_84867fa5.c:165:5: error: expected declaration or statement at end of input
  165 |     dijkstra(&graph
      |     ^~~~~~~~
